--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -20,13 +20,18 @@ jobs:
 
       - name: Prepare site
         run: |
-          mkdir site
+          mkdir -p site
+
           cp index.html site/
           cp github-metrics.svg site/
-          cp -r assets site/
-          cp -r components site/
           cp main.js site/
           cp assets/styles.css site/
+
+          mkdir -p site/assets
+          rsync -av --exclude="streak.svg" assets/ site/assets/
+
+          cp -r components site/
+
 
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
