--- a/.github/workflows/update-streak.yml
+++ b/.github/workflows/update-streak.yml
@@ -17,7 +17,7 @@ jobs:
         id: streak
         uses: bonsaialfred/github-streak-data@v1
         with:
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }}   
           user: "Erickpe8"
           output: "streak-data.json"
 
@@ -36,3 +36,4 @@ jobs:
           git add assets/streak.svg
           git commit -m "Auto-update streak SVG" || echo "No changes"
           git push
+
