--- a/.github/workflows/update-streak.yml
+++ b/.github/workflows/update-streak.yml
@@ -1,5 +1,8 @@
 name: Update Streak SVG
 
+permissions:
+  contents: write  
+
 on:
   schedule:
     - cron: "0 6 * * *" # 1 AM COL
@@ -12,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.METRICS_TOKEN }} 
 
       - name: Set Node.js
         uses: actions/setup-node@v4
@@ -33,7 +38,10 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          
+          git pull --rebase
+          
           git add assets/streak.svg streak-data.json
           git commit -m "Auto-update streak SVG" || echo "No changes"
+          
           git push
-
