--- a/.github/workflows/update-streak.yml
+++ b/.github/workflows/update-streak.yml
@@ -5,7 +5,7 @@ permissions:
 
 on:
   schedule:
-    - cron: "0 6 * * *"
+    - cron: "0 6 * * *"  # 1 AM COL
   workflow_dispatch:
 
 jobs:
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          fetch-depth: 0
 
       - name: Set Node.js
         uses: actions/setup-node@v4
@@ -34,15 +35,14 @@ jobs:
       - name: Generate final SVG
         run: node scripts/generate-svg.js
 
-      - name: Commit and Push SVG (with rebase)
+      - name: Commit and push
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          
-          git pull --rebase || true
-          
-          git add assets/streak-template.svg streak-data.json
-          git commit -m "Auto-update streak SVG" || echo "No changes to commit"
 
-          # PUSH usando tu token personal
+          git pull --rebase || true
+
+          git add assets/streak.svg streak-data.json
+          git commit -m "Auto-update streak SVG" || echo "No changes"
+
           git push https://x-access-token:${{ secrets.METRICS_TOKEN }}@github.com/Erickpe8/Erickpe8.git HEAD:main
