--- a/.github/workflows/update-streak.yml
+++ b/.github/workflows/update-streak.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout repo with PAT
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN_STREAK }} 
           fetch-depth: 0
 
       - name: Set Node.js
@@ -29,7 +29,7 @@ jobs:
 
       - name: Fetch contributions using GraphQL
         env:
-          METRICS_TOKEN: ${{ secrets.METRICS_TOKEN }}
+          METRICS_TOKEN: ${{ secrets.METRICS_TOKEN_STREAK }}
         run: node scripts/fetch-streak.js
 
       - name: Generate final SVG
@@ -45,4 +45,4 @@ jobs:
           git add assets/streak.svg streak-data.json
           git commit -m "Auto-update streak SVG" || echo "No changes"
 
-          git push https://x-access-token:${{ secrets.METRICS_TOKEN }}@github.com/Erickpe8/Erickpe8.git HEAD:main
+          git push https://x-access-token:${{ secrets.METRICS_TOKEN_STREAK }}@github.com/Erickpe8/Erickpe8.git HEAD:main  
