--- a/.github/workflows/Refresh_Metrics_and_Deploy.yml
+++ b/.github/workflows/Refresh_Metrics_and_Deploy.yml
@@ -1,28 +1,51 @@
-name: Deploy to GitHub Pages
+name: Metrics + Deploy
 
 on:
-  push:
-    branches: ["main"]
+  schedule:
+    - cron: "0 * * * *"
   workflow_dispatch:
+  push:
+    branches: [ "main" ]
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
+concurrency:
+  group: pages
+  cancel-in-progress: true
+
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # 1) Traer el repo
       - name: Checkout
         uses: actions/checkout@v4
 
+      # 2) Generar el SVG 
+      - name: Generate GitHub Metrics
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN_ERICK }}
+
+          user: Erickpe8
+          template: classic
+          base: header, activity, community, repositories, metadata
+          config_timezone: America/Bogota
+
+          retries: 3
+          delay: 20
+
+          filename: github-metrics.svg
+
+      # 3) Armar carpeta del sitio a publicar
       - name: Prepare site
         run: |
           mkdir -p site
 
-          # Copiar archivos públicos
           cp index.html site/
           cp github-metrics.svg site/
           cp main.js site/
@@ -37,11 +60,12 @@ jobs:
 
           cp -r components site/
 
+      # 4) Subir artefacto para Pages
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "site"
+          path: site
 
+      # 5) Desplegar a GitHub Pages
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
-
