Se actualiza el workflow de GitHub Actions para aplicar un parche al SVG de métricas, cambiando su paleta de colores a azul y ajustando estilos.

--- a/.github/workflows/Refresh_Metrics_and_Deploy.yml
+++ b/.github/workflows/Refresh_Metrics_and_Deploy.yml
@@ -5,7 +5,7 @@ on:
     - cron: "0 * * * *"
   workflow_dispatch:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
   contents: write
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # 2) Generar el SVG 
+      # 2) Generar el SVG
       - name: Generate GitHub Metrics
         uses: lowlighter/metrics@latest
         with:
@@ -40,6 +40,60 @@ jobs:
           delay: 20
 
           filename: github-metrics.svg
+
+      # 2.1) Parchear el SVG: transparente, sin sombras, y contribs en azul
+      - name: Patch metrics SVG (blue contrib squares)
+        run: |
+          python - << 'PY'
+          from pathlib import Path
+          import re
+
+          p = Path("github-metrics.svg")
+          s = p.read_text(encoding="utf-8")
+
+          m = re.search(r'<svg[^>]*\bwidth="(\d+)"[^>]*\bheight="(\d+)"', s)
+          if "viewBox=" not in s and m:
+              w, h = m.group(1), m.group(2)
+              s = re.sub(r'<svg\b', f'<svg viewBox="0 0 {w} {h}" preserveAspectRatio="xMidYMid meet"', s, count=1)
+          elif "preserveAspectRatio=" not in s:
+              s = re.sub(r'<svg\b', '<svg preserveAspectRatio="xMidYMid meet"', s, count=1)
+
+          # --- CSS base (transparente + sin sombras) ---
+          css = """
+          svg{background:transparent!important}
+          *{box-shadow:none!important;filter:none!important}
+          rect[fill="#fff"],rect[fill="#ffffff"],rect[fill="white"]{fill:transparent!important}
+          """
+
+          if "<style>" in s:
+              s = s.replace("<style>", "<style>\n"+css+"\n", 1)
+          else:
+              s = re.sub(r'(<svg[^>]*>)', r'\1\n<style>'+css+'</style>\n', s, count=1)
+
+          # --- Cambiar paleta verde -> azul (contrib squares) ---
+          green_to_blue = {
+              "#ebedf0": "#ebedf0",  # sin contrib (lo dejamos igual)
+              "#9be9a8": "#cfe8ff",  # bajo
+              "#40c463": "#7bbcff",  # medio
+              "#30a14e": "#2f81f7",  # alto
+              "#216e39": "#1f6feb",  # muy alto
+          }
+
+          for g, b in green_to_blue.items():
+              s = re.sub(re.escape(g), b, s, flags=re.IGNORECASE)
+
+          extra = {
+              "#c6e48b": "#cfe8ff",
+              "#7bc96f": "#7bbcff",
+              "#239a3b": "#2f81f7",
+              "#196127": "#1f6feb",
+          }
+          for g, b in extra.items():
+              s = re.sub(re.escape(g), b, s, flags=re.IGNORECASE)
+
+          p.write_text(s, encoding="utf-8")
+          print("✅ Patched:", p)
+          PY
 
       # 3) Armar carpeta del sitio a publicar
       - name: Prepare site
