--- a/.github/workflows/Refresh_Metrics_and_Deploy.yml
+++ b/.github/workflows/Refresh_Metrics_and_Deploy.yml
@@ -1,11 +1,11 @@
-name: Metrics + Deploy
+name: Deploy Pages
 
 on:
-  schedule:
-    - cron: "0 */6 * * *"
-  workflow_dispatch:
   push:
     branches: ["main"]
+  workflow_dispatch:
+  schedule:
+    - cron: "0 */6 * * *"
 
 permissions:
   contents: read
@@ -17,141 +17,43 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
 
     steps:
-      # 1) Traer el repo
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      # 2) Generar el SVG
       - name: Generate GitHub Metrics
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN_ERICK }}
-
           user: Erickpe8
           template: classic
-          base: header, activity, community, repositories, metadata
+          base: header, activity, metadata
           config_timezone: America/Bogota
-
+          filename: github-metrics.svg
           retries: 1
           delay: 5
 
-          filename: github-metrics.svg
-
-      # 2.1) Parchear el SVG: transparente, sin sombras, y contribs en azul
-      - name: Patch metrics SVG (blue contrib squares)
-        run: |
-          python - << 'PY'
-          from pathlib import Path
-          import re
-
-          p = Path("github-metrics.svg")
-          s = p.read_text(encoding="utf-8")
-
-          m = re.search(r'<svg[^>]*\bwidth="(\d+)"[^>]*\bheight="(\d+)"', s)
-          if "viewBox=" not in s and m:
-              w, h = m.group(1), m.group(2)
-              s = re.sub(r'<svg\b', f'<svg viewBox="0 0 {w} {h}" preserveAspectRatio="xMidYMid meet"', s, count=1)
-          elif "preserveAspectRatio=" not in s:
-              s = re.sub(r'<svg\b', '<svg preserveAspectRatio="xMidYMid meet"', s, count=1)
-
-          css = """
-          svg{background:transparent!important}
-          *{box-shadow:none!important;filter:none!important}
-          rect[fill="#fff"],rect[fill="#ffffff"],rect[fill="white"]{fill:transparent!important}
-          """
-
-          if "<style>" in s:
-              s = s.replace("<style>", "<style>\n"+css+"\n", 1)
-          else:
-              s = re.sub(r'(<svg[^>]*>)', r'\1\n<style>'+css+'</style>\n', s, count=1)
-
-          green_to_blue = {
-              "#ebedf0": "#ebedf0",
-              "#9be9a8": "#cfe8ff",
-              "#40c463": "#7bbcff",
-              "#30a14e": "#2f81f7",
-              "#216e39": "#1f6feb",
-          }
-
-          for g, b in green_to_blue.items():
-              s = re.sub(re.escape(g), b, s, flags=re.IGNORECASE)
-
-          extra = {
-              "#c6e48b": "#cfe8ff",
-              "#7bc96f": "#7bbcff",
-              "#239a3b": "#2f81f7",
-              "#196127": "#1f6feb",
-          }
-          for g, b in extra.items():
-              s = re.sub(re.escape(g), b, s, flags=re.IGNORECASE)
-
-          p.write_text(s, encoding="utf-8")
-          print("Patched:", p)
-          PY
-
-      # 2.2) Si NO cambió el SVG vs lo que ya está en main, saltar deploy
-      - name: Check if metrics changed
-        id: diff
-        run: |
-          set -euo pipefail
-
-          # Asegura tener origin/main
-          git fetch origin main --depth=1 || true
-
-          if git cat-file -e origin/main:github-metrics.svg 2>/dev/null; then
-            git show origin/main:github-metrics.svg > /tmp/old.svg
-            if cmp -s /tmp/old.svg github-metrics.svg; then
-              echo "changed=false" >> "$GITHUB_OUTPUT"
-              echo "Metrics unchanged. Skipping Pages deploy."
-              exit 0
-            fi
-          fi
-
-          echo "changed=true" >> "$GITHUB_OUTPUT"
-          echo "Metrics changed. Will deploy."
-
-      # 3) Armar carpeta del sitio a publicar
       - name: Prepare site
-        if: steps.diff.outputs.changed == 'true'
         run: |
-          mkdir -p site
-
+          mkdir -p site/assets
           cp index.html site/
           cp github-metrics.svg site/
           cp main.js site/
-
-          mkdir -p site/assets
           cp assets/styles.css site/assets/styles.css
+          cp -r components site/ || true
 
-          rsync -av \
-            --exclude="streak.svg" \
-            --exclude="streak-template.svg" \
-            --exclude="*.json" \
-            assets/ site/assets/
-
-          cp -r components site/
-
-      # 4) Configurar Pages
-      - name: Configure GitHub Pages
-        if: steps.diff.outputs.changed == 'true'
+      - name: Configure Pages
         uses: actions/configure-pages@v5
 
-      # 5) Subir artefacto para Pages
-      - name: Upload GitHub Pages artifact
-        if: steps.diff.outputs.changed == 'true'
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: site
 
-      # 6) Desplegar a GitHub Pages
-      - name: Deploy to GitHub Pages
-        if: steps.diff.outputs.changed == 'true'
+      - name: Deploy
         uses: actions/deploy-pages@v4
