--- a/.github/workflows/Refresh_Metrics_and_Deploy.yml
+++ b/.github/workflows/Refresh_Metrics_and_Deploy.yml
@@ -2,7 +2,7 @@ name: Metrics + Deploy
 
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 */6 * * *"
   workflow_dispatch:
   push:
     branches: ["main"]
